unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Secondary_Reaction_Measurement_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Reaction_Measurement_Vendor__c</fullName>
    <label>Secondary Reaction Measurement Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Placed - Spotify Commissioned</fullName>
            </value>
            <value>
                <fullName>Placed - Client Commissioned</fullName>
            </value>
            <value>
                <fullName>Foursquare - Spotify Commissioned</fullName>
            </value>
            <value>
                <fullName>Foursquare - Client Commissioned</fullName>
            </value>
            <value>
                <fullName>Nielsen Catalina Solutions - Spotify Commissioned</fullName>
            </value>
            <value>
                <fullName>Nielsen Catalina Solutions - Client Commissioned</fullName>
            </value>
            <value>
                <fullName>Nielsen MTA - Spotify Commissioned</fullName>
            </value>
            <value>
                <fullName>Nielsen MTA - Client Commissioned</fullName>
            </value>
            <value>
                <fullName>Nielsen Watch Effect - Spotify Commissioned</fullName>
            </value>
            <value>
                <fullName>Nielsen Watch Effect - Client Commissioned</fullName>
            </value>
            <value>
                <fullName>Nielsen Buyer Insights - Spotify Commissioned</fullName>
            </value>
            <value>
                <fullName>Nielsen Buyer Insights - Client Commissioned</fullName>
            </value>
            <value>
                <fullName>Streaming Conversion for Labels</fullName>
            </value>
            <value>
                <fullName>Oracle Auto BTR Analysis</fullName>
            </value>
            <value>
                <fullName>Oracle DLX ROI for CPG</fullName>
            </value>
            <value>
                <fullName>Oracle DLX ROI for Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>