unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Served_By__c.field-meta.xml
<CustomField>
    <fullName>Served_By__c</fullName>
    <label>Served By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DFP</fullName>
            </value>
            <value>
                <fullName>Spotify Ad Server</fullName>
            </value>
            <value>
                <fullName>Non-Ad Served</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>