unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Staged_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Staged_Sales_Order__c</fullName>
    <inlineHelpText>Imported Order Header to migrate.</inlineHelpText>
    <label>Staged Sales Order</label>
    <referenceTo>Staged_Sales_Order__c</referenceTo>
    <relationshipLabel>Staged Sales Order Lines</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>