unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Account_Id_OK__c.field-meta.xml
<CustomField>
    <fullName>STG_Account_Id_OK__c</fullName>
    <description>Checks if Account Id populated on DFP lines</description>
    <formula>IF( ISPICKVAL(Served_By__c,&#39;DFP&#39;), !ISBLANK(AccountId__c) , True)</formula>
    <inlineHelpText>Checks if Account Id populated on DFP lines</inlineHelpText>
    <label>STG Account Id OK</label>
    <type>Checkbox</type>
</CustomField>