unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>STG_Account_Tier__c</fullName>
    <formula>TEXT(Staged_Sales_Order__r.Account_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Account Tier</label>
    <type>Text</type>
</CustomField>