unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Ad_Location_Description_Ok__c.field-meta.xml
<CustomField>
    <fullName>STG_Ad_Location_Description_Ok__c</fullName>
    <description>Checks that Ad location Description is populated for DFP order lines</description>
    <formula>IF( ISPICKVAL(Served_By__c,&#39;DFP&#39;), !ISBLANK(TEXT(Ad_Location_Description__c)), True)</formula>
    <inlineHelpText>Checks that Ad location Description is populated for DFP order lines</inlineHelpText>
    <label>STG Ad Location Description Ok</label>
    <type>Checkbox</type>
</CustomField>