unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Agency_Commission_Ok__c.field-meta.xml
<CustomField>
    <fullName>STG_Agency_Commission_Ok__c</fullName>
    <description>Agency Commission Fields (amount and %) populated</description>
    <formula>IF( ISPICKVAL(Served_By__c,&#39;DFP&#39;), !ISNULL(Agency_Commission__c) &amp;&amp; !ISNULL(Agency_Commission_Amount__c), True)</formula>
    <inlineHelpText>Agency Commissiion field cannot be left blank. must have 0 or other numeric values</inlineHelpText>
    <label>STG Agency Commission Ok</label>
    <type>Checkbox</type>
</CustomField>