unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Bill_To_Account_OK__c.field-meta.xml
<CustomField>
    <fullName>STG_Bill_To_Account_OK__c</fullName>
    <description>Checks that Bill To Account are be populated for DFP lines</description>
    <formula>IF( ISPICKVAL(Served_By__c,&#39;DFP&#39;), !ISBLANK(Bill_To_Account_Id__c) , True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks that Bill To Account are be populated for DFP lines</inlineHelpText>
    <label>STG Bill To Account OK</label>
    <type>Checkbox</type>
</CustomField>