unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Billing_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>STG_Billing_Rule_Id__c</fullName>
    <description>Displays the Correct Billing Rule ID based on Calendar type (based on Custom settings)</description>
    <formula>IF( ISPICKVAL(Billing_Calendar__c,&#39;Broadcast&#39;), $Setup.CS_Migration_Settings__c.Billing_Rule_Broadcast__c,       $Setup.CS_Migration_Settings__c.Billing_Rule_Standard__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Correct Billing Rule ID based on Calendar type (based on Custom settings)</inlineHelpText>
    <label>STG Billing Rule Id</label>
    <type>Text</type>
</CustomField>