unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Booking_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>STG_Booking_Time_Zone__c</fullName>
    <formula>Booking_Time_Zone__r.Name</formula>
    <label>STG Booking Time Zone</label>
    <type>Text</type>
</CustomField>