unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Calculation_Type_OK__c.field-meta.xml
<CustomField>
    <fullName>STG_Calculation_Type_OK__c</fullName>
    <description>Check Calculation Type populated for DFP lines</description>
    <formula>IF( ISPICKVAL(Served_By__c,&#39;DFP&#39;), !ISBLANK(TEXT(Calculation_Type__c)), True)</formula>
    <inlineHelpText>Check Calculation Type populated for DFP lines</inlineHelpText>
    <label>STG Calculation Type OK</label>
    <type>Checkbox</type>
</CustomField>