unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Configuration_Package_ID__c.field-meta.xml
<CustomField>
    <fullName>STG_Configuration_Package_ID__c</fullName>
    <formula>IF (ISPICKVAL(Served_By__c,&#39;DFP&#39;),
$Setup.CS_Migration_Settings__c.Default_Package_To_Clone__c,
$Setup.CS_Migration_Settings__c.Non_DFP_Package_To_Clone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Configuration Package ID</label>
    <type>Text</type>
</CustomField>