unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Contains_Errors__c.field-meta.xml
<CustomField>
    <fullName>STG_Contains_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags if the line contains errors either before or during processing.</description>
    <inlineHelpText>Flags if the line contains errors either before or during processing.</inlineHelpText>
    <label>STG Contains Errors</label>
    <type>Checkbox</type>
</CustomField>