unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Flight_Begin_Date_Booking_TZ_2__c.field-meta.xml
<CustomField>
    <fullName>STG_Flight_Begin_Date_Booking_TZ_2__c</fullName>
    <formula>DATE(
  YEAR(DATEVALUE(STG_Flight_Begin_Date_Booking_TZ__c)),
  MONTH(DATEVALUE(STG_Flight_Begin_Date_Booking_TZ__c)), 
  DAY(DATEVALUE(STG_Flight_Begin_Date_Booking_TZ__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Flight Begin Date Booking TZ 2</label>
    <type>Date</type>
</CustomField>