unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Flight_Begin_Date_Time_Selected__c.field-meta.xml
<CustomField>
    <fullName>STG_Flight_Begin_Date_Time_Selected__c</fullName>
    <formula>STG_Flight_Begin_Date_Booking_TZ__c + &#39; &#39; + STG_Flight_Begin_Time_Booking_TZ__c + &#39; &#39; +  STG_Booking_Time_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Flight Begin Date Time Selected</label>
    <type>Text</type>
</CustomField>