unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Flight_Begin_Time_Booking_TZ__c.field-meta.xml
<CustomField>
    <fullName>STG_Flight_Begin_Time_Booking_TZ__c</fullName>
    <label>STG Flight Begin Time Booking TZ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>