unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Flight_Begin_YMD__c.field-meta.xml
<CustomField>
    <fullName>STG_Flight_Begin_YMD__c</fullName>
    <description>Flight begin in YMD format</description>
    <formula>TEXT(YEAR(Flight_Begin__c)) 
+ &#39;-&#39; + 
IF( LEN(TEXT(MONTH(Flight_Begin__c))) = 1, &#39;0&#39; + TEXT(MONTH(Flight_Begin__c)) , TEXT(MONTH(Flight_Begin__c))) 
+ &#39;-&#39; + 
IF( LEN(TEXT(DAY(Flight_Begin__c))) = 1, &#39;0&#39; + TEXT(DAY(Flight_Begin__c)) , TEXT(DAY(Flight_Begin__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flight begin in YMD format</inlineHelpText>
    <label>STG Flight Begin YMD</label>
    <type>Text</type>
</CustomField>