unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Flight_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>STG_Flight_End_Date_Time__c</fullName>
    <formula>DATETIMEVALUE( 
TEXT(YEAR( Flight_End__c)) + &#39;-&#39; + TEXT(MONTH(Flight_End__c)) + &#39;-&#39; + TEXT(DAY(Flight_End__c)) + &#39; &#39; + Flight_End_Time__c + &#39;:00&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Flight End Date Time</label>
    <type>DateTime</type>
</CustomField>