unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Flight_End_YMD__c.field-meta.xml
<CustomField>
    <fullName>STG_Flight_End_YMD__c</fullName>
    <formula>TEXT(YEAR(Flight_End__c)) 
+ &#39;-&#39; + 
 IF(  LEN(TEXT(MONTH(Flight_End__c))) = 1, &#39;0&#39; + TEXT(MONTH(Flight_End__c)) , TEXT(MONTH(Flight_End__c))) 
+ &#39;-&#39; +
 IF( LEN(TEXT(DAY(Flight_End__c))) = 1, &#39;0&#39; + TEXT(DAY(Flight_End__c)) , TEXT(DAY(Flight_End__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Flight End YMD</label>
    <type>Text</type>
</CustomField>