unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_GL_Invoicing_Code__c.field-meta.xml
<CustomField>
    <fullName>STG_GL_Invoicing_Code__c</fullName>
    <description>Invoicing GL Code</description>
    <formula>Product__r.Invoice_GL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoicing GL Code</inlineHelpText>
    <label>STG GL Invoicing Code</label>
    <type>Text</type>
</CustomField>