unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_GL_Revenue_Code__c.field-meta.xml
<CustomField>
    <fullName>STG_GL_Revenue_Code__c</fullName>
    <formula>Product__r.Rev_Accrual_GL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG GL Revenue Code</label>
    <type>Text</type>
</CustomField>