unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Imported_Fulfilment_Item__c.field-meta.xml
<CustomField>
    <fullName>STG_Imported_Fulfilment_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fulfilment Item created by import process</description>
    <inlineHelpText>Fulfilment Item created by import process</inlineHelpText>
    <label>STG Imported Fulfilment Item</label>
    <referenceTo>csdf__Fulfilment_Item__c</referenceTo>
    <relationshipLabel>Staged Sales Order Lines</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>