unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Imported_Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>STG_Imported_Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Configuration Created by the Import Process</description>
    <inlineHelpText>Count of all lines withe Product Configuration &amp; Fulfilment Id</inlineHelpText>
    <label>STG Imported Sales Order Line</label>
    <referenceTo>cscfga__Product_Configuration__c</referenceTo>
    <relationshipLabel>Staged Sales Order Lines</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>