unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Is_Imported__c.field-meta.xml
<CustomField>
    <fullName>STG_Is_Imported__c</fullName>
    <description>Considered imported if fulfilment Item and Configuration created</description>
    <formula>AND( STG_Imported_Sales_Order_Line__c != null,  STG_Imported_Fulfilment_Item__c != null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Considered imported if fulfilment Item and Configuration created</inlineHelpText>
    <label>STG Is Imported</label>
    <type>Checkbox</type>
</CustomField>