unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Line_Item_Description_OK__c.field-meta.xml
<CustomField>
    <fullName>STG_Line_Item_Description_OK__c</fullName>
    <description>Check Line Item Description populated for DFP lines</description>
    <formula>IF( ISPICKVAL(Served_By__c,&#39;DFP&#39;), !ISBLANK(Line_Item_Description__c) , True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check Line Item Description populated for DFP lines</inlineHelpText>
    <label>STG Line Item Description OK</label>
    <type>Checkbox</type>
</CustomField>