unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Message__c.field-meta.xml
<CustomField>
    <fullName>STG_Message__c</fullName>
    <description>Staging Error / Info / Warning messages for this line</description>
    <inlineHelpText>Staging Error / Info / Warning messages for this line</inlineHelpText>
    <label>STG Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>