unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Migrated_Order_Line_Id_Ok__c.field-meta.xml
<CustomField>
    <fullName>STG_Migrated_Order_Line_Id_Ok__c</fullName>
    <description>Checks Migrated Order Line populated for DFP order lines</description>
    <formula>IF( ISPICKVAL(Served_By__c,&#39;DFP&#39;), !ISNULL(Migrated_Order_Line_Id__c) , True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks Migrated Order Line populated for DFP order lines</inlineHelpText>
    <label>STG Migrated Order Line Id Ok</label>
    <type>Checkbox</type>
</CustomField>