unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>STG_Opportunity_Id__c</fullName>
    <formula>CASESAFEID(Staged_Sales_Order__r.Opportunity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Opportunity Id</label>
    <type>Text</type>
</CustomField>