unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Overbook__c.field-meta.xml
<CustomField>
    <fullName>STG_Overbook__c</fullName>
    <formula>IF( ISPICKVAL(Ad_Type__c , &#39;Price Priority&#39;) || ISPICKVAL(Ad_Type__c , &#39;Network&#39;) || ISPICKVAL(Ad_Type__c , &#39;Bulk&#39;) || ISPICKVAL(Ad_Type__c , &#39;House&#39;), false, true)</formula>
    <label>STG Overbook</label>
    <type>Checkbox</type>
</CustomField>