unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Playlist_Name__c.field-meta.xml
<CustomField>
    <fullName>STG_Playlist_Name__c</fullName>
    <formula>Playlist__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Playlist Name</label>
    <type>Text</type>
</CustomField>