unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Playlist_URI__c.field-meta.xml
<CustomField>
    <fullName>STG_Playlist_URI__c</fullName>
    <formula>Playlist__r.URI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Playlist URI</label>
    <type>Text</type>
</CustomField>