unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Processed__c.field-meta.xml
<CustomField>
    <fullName>STG_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STG Processed</label>
    <type>Checkbox</type>
</CustomField>