unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>STG_Product_Category__c</fullName>
    <formula>TEXT(Product__r.Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Product Category</label>
    <type>Text</type>
</CustomField>