unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>STG_Product_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Product Name</label>
    <type>Text</type>
</CustomField>