unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Rev_Accrual_Agency_Fee_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>STG_Rev_Accrual_Agency_Fee_GL_Code__c</fullName>
    <formula>Product__r.Rev_Accrual_Agency_Fee_GL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Rev Accrual Agency Fee GL Code</label>
    <type>Text</type>
</CustomField>