unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Revenue_Schedule_Rule__c.field-meta.xml
<CustomField>
    <fullName>STG_Revenue_Schedule_Rule__c</fullName>
    <description>Displays the Correct Revenue Rule ID based on Custom settings</description>
    <formula>$Setup.CS_Migration_Settings__c.Revenue_Rule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Correct Revenue Rule ID based on Custom settings</inlineHelpText>
    <label>STG Revenue Schedule Rule</label>
    <type>Text</type>
</CustomField>