unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/STG_Sizes__c.field-meta.xml
<CustomField>
    <fullName>STG_Sizes__c</fullName>
    <formula>STG_Imported_Fulfilment_Item__r.csdf__Sizes__c</formula>
    <label>STG Sizes</label>
    <type>Text</type>
</CustomField>