unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Viewability_Metric__c.field-meta.xml
<CustomField>
    <fullName>Viewability_Metric__c</fullName>
    <label>Viewability Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IAB [70%]</fullName>
            </value>
            <value>
                <fullName>GroupM [100%]</fullName>
            </value>
            <value>
                <fullName>MOAT  (ad viewable on completion)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>