unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Viewability_Metric_Applied__c.field-meta.xml
<CustomField>
    <fullName>Viewability_Metric_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Viewability Metric Applied for this Line Item</description>
    <inlineHelpText>Viewability Metric Applied for this Line Item</inlineHelpText>
    <label>Viewability Metric Applied</label>
    <type>Checkbox</type>
</CustomField>