unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/X3rd_Party_Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Ad_Server__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look Up to Third Party Ad Server Object</description>
    <inlineHelpText>Look Up to Third Party Ad Server Object</inlineHelpText>
    <label>3rd Party Ad Server</label>
    <referenceTo>X3rd_Party_Ad_Server__c</referenceTo>
    <relationshipLabel>Staged Sales Order Lines</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>