unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/X3rd_Party_Research_Form__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Research_Form__c</fullName>
    <description>3rd Party Research Form for this Line Item - URL to access the form</description>
    <inlineHelpText>3rd Party Research Form for this Line Item - URL to access the form</inlineHelpText>
    <label>3rd Party Research Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>