unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/X3rd_Party_Research_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Research_Paid_By__c</fullName>
    <label>3rd Party Research Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spotify</fullName>
            </value>
            <value>
                <fullName>Advertiser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>