unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/X3rd_Party_Research_Vendor__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Research_Vendor__c</fullName>
    <description>3rd Party Research Vendor for this Line Item</description>
    <inlineHelpText>3rd Party Research Vendor for this Line Item</inlineHelpText>
    <label>3rd Party Research Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milward Brown</fullName>
            </value>
            <value>
                <fullName>Nielsen Brand Effect</fullName>
            </value>
            <value>
                <fullName>Nielsen Catalina Solutions</fullName>
            </value>
            <value>
                <fullName>LeanLab</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Foursquare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>