unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/X3rd_Party_Tracking__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Party Tracking</label>
    <type>Checkbox</type>
</CustomField>