unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/X3rd_Party_Tracking_Vendor__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Tracking_Vendor__c</fullName>
    <description>3rd Party Tracking Vendor for this Line Item</description>
    <inlineHelpText>3rd Party Tracking Vendor for this Line Item</inlineHelpText>
    <label>3rd Party Tracking Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nielsen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>