unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/X3rd_Party_Verification__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>3rd Party Verification for this Line Item</description>
    <inlineHelpText>3rd Party Verification for this Line Item</inlineHelpText>
    <label>3rd Party Verification</label>
    <type>Checkbox</type>
</CustomField>