unpackaged/main/default/objects/Staged_Sales_Order_Line__c/validationRules/End_before_Begin.validationRule-meta.xml
<ValidationRule>
    <fullName>End_before_Begin</fullName>
    <active>true</active>
    <errorConditionFormula>Flight_End__c &lt; Flight_Begin__c</errorConditionFormula>
    <errorDisplayField>Flight_Begin__c</errorDisplayField>
    <errorMessage>The Flight Begin must be before Flight End</errorMessage>
</ValidationRule>